tests/ui/break_loop.gopp
package main
func main() {
    break loop //~ ERROR break loop outside of a loop block
}
